# strat_backtest

./: .gitignore  .pylintrc  CLAUDE.md  README.md  main.py  pyproject.toml  sample_trades.parquet
.claude/: CLAUDE.md  settings.json
.claude/agents/: python-code-quality.md  python-performance-optimizer.md  python-test-specialist.md
.claude/hooks/: format_python.sh
.github/workflows/: ci.yml
data/: AAPL.parquet
docs/: comprehensive_framework_analysis.md  fixed_time_exit_integration.md  gentrades_refactor_testing.md  gentrades_refactoring.md  github_issues_best_practices.md  improvements.md  trading_strategy_test_plan.md
examples/: README.md  simple_rsi_strategy.py
examples/data/: sample_ohlcv.parquet
notebooks/: gen_sample_csv.ipynb
src/strat_backtest/: __init__.py  trade_strategy.py
tests/: conftest.py  test_exit_method.py  test_fixedexit_utils.py  test_fn.py  test_signal_evaluator.py  test_trade_strategy.py  test_utils.py
tests/base/: test_gen_trades.py  test_gen_trades_integration_with_fixedtimeexit.py  test_gen_trades_validation.py
tests/data/: breakout_eval_trades.parquet  fixedexit_trades.parquet  open_eval_trades.parquet  sample_gen_trades.parquet  sample_trades.parquet
tests/entry_method/: test_entry_method.py  test_multi_entry.py
tests/exit_method/: test_exit_method.py  test_fifoexit.py  test_fixedexit.py  test_fixedtimeexit.py  test_half_fifoexit.py  test_half_lifoexit.py  test_lifoexit.py  test_takeallexit.py
tests/signal_evaluator/: test_signal_evaluator.py
tests/stop_method/: test_stop_method.py
tests/utils/: test_utils.py  (+5 more)
(+71 files in other folders)
