[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pos-mgmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
dependencies = [
    "pandas>=2.2.3",
    "pydantic>=2.11.4",
    "ta-lib>=0.6.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest",
]