[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strat-backtest"
version = "0.1.0"
description = "Framework to backtest trading strategy (including deep learning models)"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = {text = "MIT"}
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.4",
    "ta-lib>=0.6.3",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strat_backtest"]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "missing-docstring",
    "invalid-name", 
    "len-as-condition",
    "fixme",
    "too-few-public-methods",
    "unnecessary-ellipsis",
]

[tool.pylint.DESIGN]
max-attributes = 20
max-args = 8
max-positional-arguments = 8

[tool.pylint.FORMAT]
max-line-length = 88  # Match Black's default
